--- a/Laba8/Laba8.csproj
+++ b/Laba8/Laba8.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Laba5\Laba5.csproj" />
+      <ProjectReference Include="..\logika\logika.csproj" />
     </ItemGroup>
 
 </Project>
