--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -4,6 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <TargetFrameworks>net8.0;net7.0</TargetFrameworks>
+        <RootNamespace>logika</RootNamespace>
     </PropertyGroup>
 
 </Project>
